--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -262,7 +262,7 @@
 <!-- NProgress -->
 <script src="/js/nprogress.js"></script>
 <script src="/js/switchery.min.js"></script>
-<script src="/js/parsley.min.js"></script>
+<!--<script src="/js/parsley.min.js"></script>-->
 <script src="/js/jquery.dataTables.min.js"></script>
 <script src="/js/dataTables.bootstrap.min.js"></script>
 <!-- Custom Theme Scripts -->
