Update href link ho-so

--- a/App/Views/BaiViet/viet_bai.html
+++ b/App/Views/BaiViet/viet_bai.html
@@ -68,7 +68,12 @@ Danh sách hồ sơ
                                 <button type="submit" class="btn btn-success">Thêm</button>
                             </div>
                         </div>
-
+                        <button class="btn btn-default source" onclick="new PNotify({
+                          title: 'Regular Success',
+                          text: 'That thing that you were trying to do worked!',
+                          type: 'success',
+                          styling: 'bootstrap3'
+                          });">Success</button>
                     </form>
                 </div>
             </div>
