--- a/App/Views/ThanhVien/chinh_sua_thong_tin.html
+++ b/App/Views/ThanhVien/chinh_sua_thong_tin.html
@@ -53,8 +53,7 @@ Xin chào
                     </div>
                     <div class="x_content">
                         <br>
-                        <form action="/admin/users/updateProfile" method="post" data-parsley-validate="" class="form-horizontal form-label-left"
-                              novalidate="">
+                        <form action="/admin/users/updateProfile" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
                             <input type="hidden" name="id" value="{{account.id}}">
                             <div class="form-group">
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">Họ và tên
@@ -116,6 +115,12 @@ Xin chào
                                            class="date-picker form-control col-md-7 col-xs-12 parsley-success"
                                            required="required" type="text" data-parsley-id="16" value="1/1/1997">
                                     <ul class="parsley-errors-list" id="parsley-id-16"></ul>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="hinhAnh" class="control-label col-md-3 col-sm-3 col-xs-12">Hình ảnh</label>
+                                <div class="col-md-6 col-sm-6 col-xs-12">
+                                    <input type="file" class="form-control-file" name="hinhAnh" id="hinhAnh">
                                 </div>
                             </div>
                             <div class="ln_solid"></div>
