--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -168,12 +168,12 @@ right connector from last child*/
     margin: 17px 1em 0 2em;
 }
 
-.item input+.arrow {
+.item input+ .dropdown .arrow {
     transform: rotate(-90deg);
     transition: 0.1s;
 }
 
-.item input:checked+.arrow {
+.item input:checked+ .dropdown .arrow {
     transform: rotate(0deg);
     transition: 0.1s;
 }
